haproxy/Service-haproxy.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: haproxy
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: haproxy
    app.kubernetes.io/version: 3.2.9
    helm.sh/chart: haproxy-1.27.0
  name: haproxy
  namespace: haproxy
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
    - name: stat
      port: 1024
      protocol: TCP
      targetPort: stat
  selector:
    app.kubernetes.io/instance: haproxy
    app.kubernetes.io/name: haproxy
  type: ClusterIP
