haproxy/CiliumClusterwideNetworkPolicy-haproxy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: haproxy
  namespace: haproxy
spec:
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/component: app
        - matchLabels:
            haproxy/egress: allow
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: kubernetes-ingress
      io.kubernetes.pod.namespace: haproxy
  ingress:
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "1042"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            haproxy/ingress: allow
      fromEntities:
        - world
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
